Resolving issue where images were too wide for the animal header

--- a/src/app/modules/hospital-manager/components/animal-header/animal-header.component.scss
+++ b/src/app/modules/hospital-manager/components/animal-header/animal-header.component.scss
@@ -38,6 +38,7 @@ text-align: center;
 
 .containerImage {
     max-height: 40vh;
+    max-width: 400px;
 }
 
 .containerButton {
